--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -63,5 +63,8 @@ data:
   {{ if .Files.Get "files/ape.toml.template" }}
   ape.toml.template: {{ tpl (.Files.Get "files/ape.toml.template") . | quote }}
   {{ end }}
+  {{ if .Files.Get "files/gauge_stats_list.toml" }}
+  gauge_stats_list.toml: {{ tpl (.Files.Get "files/gauge_stats_list.toml") . | quote }}
+  {{ end }}
   {{- end }}
 ---
