--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -52,7 +52,7 @@ clusterServiceDnsDomain: cluster.local
 
 image:
   repository: aerospike/aerospike-server
-  tag: 5.5.0.7
+  tag: 6.4.0.1_1
 
 ### -------------------------------
 ### Aerospike init container image
@@ -665,3 +665,7 @@ alertmanager:
 
   # Alertmanager configuration file as base64 encoded string
   # alertmanagerConfFileBase64:
+
+## @param extraDeploy Array of extra objects to deploy with the release
+##
+extraDeploy: []
