--- a/helm/templates/persistentvolumeclaim.yaml
+++ b/helm/templates/persistentvolumeclaim.yaml
@@ -6,8 +6,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: {{ $pv.name }}
   labels:
-    app: {{ template "aerospike.name" . }}
-    chart: {{ .Chart.Name }}
+    app: {{ template "aerospike.name" $ }}
+    chart: {{ $.Chart.Name }}
     release: {{ $.Release.Name }}
     unique-app: {{ $.Release.Name }}-aerospike
     {{- with $.Values.labels }}{{ toYaml . | nindent 4 }}{{ end }}
