--- a/helm/files/aerospike.template.conf
+++ b/helm/files/aerospike.template.conf
@@ -60,6 +60,7 @@ namespace ${NAMESPACE} {
 	replication-factor ${REPL_FACTOR}
 	memory-size ${MEM_GB}G
 	default-ttl ${DEFAULT_TTL}
+	nsup-period 120
 
 #	storage-engine memory
 
